--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,8 @@ build_job:
   only:
   - branches
   script:
-  - '& "C:\Users\zubov\nuget\nuget.exe" restore'
-  - '& "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\MSBuild\Current\Bin\MSBuild.exe" Mob2.sln'
+  - '"C:\Users\zubov\nuget\nuget.exe" restore'
+  - '"C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\MSBuild\Current\Bin\MSBuild.exe" Mob2.sln'
   artifacts:
     paths:
     - 'Mob2\Mob2\bin\Debug\Mob2.exe'
