--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,8 @@ build_job:
   - branches
   script:
   - 'cd Mob2'
-  - '"C:\Tools\Nuget\nuget.exe" restore "Mob2.sln"'
-  - '"C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\MSBuild\Current\Bin\MSBuild.exe" Mob2.sln'
+  - 'C:\Tools\Nuget\nuget.exe restore'
+  - '& "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\MSBuild\Current\Bin\MSBuild.exe" Mob2.sln'
   artifacts:
     paths:
     - 'Mob2\Mob2\bin\Debug\Mob2.exe'
